--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,44 @@
-frontend/node_modules/ 
-backend/node_modules/ 
-.env 
+# Dependencies
+frontend/node_modules/
+backend/node_modules/
+node_modules/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Expo
+.expo/
+dist/
+web-build/
+
+# macOS
+.DS_Store
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+Thumbs.db
+
+# Build files
+*.tsbuildinfo
+build/
+*.apk
+*.aab
+*.ipa
+
+# Temporary files
+*.tmp
+*.temp
