--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,5 +7,7 @@ PORT=5000
 # Format: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?appName=<appname>
 MONGODB_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@cluster0.kvjy9ez.mongodb.net/krishi_connect?appName=Cluster0
 
-# JWT Configuration (if needed)
-# JWT_SECRET=your_jwt_secret_here
+# JWT Configuration
+# IMPORTANT: Use a strong, random secret key for production!
+# You can generate one using: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
