--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
+    "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1"
   }
 }
